# consulrs

./: Cargo.toml
consulrs_derive/: Cargo.toml
consulrs_derive/src/: error.rs
src/: api.rs  configuration.rs  lib.rs
src/api/configuration/: common.rs  requests.rs
src/api/kv/: common.rs
