[package]
name = "consulrs"
version = "0.1.0"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "An asynchronous Rust client library for the Hashicorp Consul API."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/consulrs"
keywords = ["Consul", "API", "Client", "Hashicorp"]
edition = "2018"

[workspace]
members = ["consulrs_derive"]

[dependencies]
async-trait = "0.1.80"
base64 = "0.22.1"
consulrs_derive = { version = "0.1.0", path = "consulrs_derive" }
derive_builder = "0.10.2"
http = "1.1.0"
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
] }
rustify = "0.5.4"
rustify_derive = "0.5.3"
serde = "1.0.200"
serde_json = "1.0.116"
serde_with = "1.10.0"
thiserror = "1.0.59"
tracing = "0.1.28"
url = "2.2.2"

[dev-dependencies]
dockertest-server = { version = "0.1.4", features = ["hashi"] }
env_logger = "0.11.3"
hyper = "1.3.1"
futures = "0.3.17"
test-log = { version = "0.2.16", features = ["trace"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-test = "0.4.4"
tracing-subscriber = { version = "0.2.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
